a couple animation added to first page but nav on mobile crashed waiting to fix for now

--- a/styling.css
+++ b/styling.css
@@ -40,14 +40,23 @@ body{
 
 .first-page-h1{
     position: relative;
-    border-bottom: 5px solid #74E8A8;
     color: white;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Gloria Hallelujah', cursive;
     text-align: center;
     font-size: 40px;
-    top: 30px;
-    left: 50%;
+    top: 20px;
+    left: -50%;
     transform: translateX(-50%);
+}
+
+.first-page-line{
+  position: relative;
+  top: 20px;
+  width: 100px;
+  height: 5px;
+  background-color: #74E8A8;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 
@@ -59,6 +68,30 @@ body{
     width: 100%;
     height: 70vh;
 }
+
+.first-page-arrow-down{
+
+   margin-top: 40px;
+}
+
+#first-page-arrow-down-i{
+  position: relative; 
+  font-size: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #74E8A8;
+  animation: arrow-anime 2s 5s infinite;
+}
+
+
+@keyframes arrow-anime {
+  0% {top: 0px;}
+  10% {top: 50px;}
+  20% {top: -50px;}
+  30% {top: 20px;}
+  50% {top: 0px;}
+}
+
 
 .first-page-container{
     position: absolute;
@@ -94,6 +127,20 @@ ul li{
     height: 50px;
     background-color: transparent;
   }
+/* ------------------------------------------------------   */
+
+  .first-page-container-div{
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 160px;
+    height: 50px;
+    background-color: transparent;
+    display: none;
+  }
+
+/* ------------------------------------------------------   */
 
   #contact-form-div{
     position: relative;
@@ -211,9 +258,10 @@ ul li{
 
   .first-page-contact-div-col{
     position: relative;
+    width: 350px;
     left: 50%;
     transform: translateX(-50%);
-    top: 120px;
+    top: 80px;
     height: 100px;
   }
 
@@ -356,6 +404,7 @@ ul li{
   left: 0;
   display: none;
 }
+
 
 .project-1-hidden-p, .project-2-hidden-p, .project-3-hidden-p{
   position: relative;
